# esoteric_nonsense

./: .gitignore  Backend Architecture and todos.txt  Cargo.toml  Moving forward.txt  README.md  build_instructions.md
.github/workflows/: rust.yml
src/: conversions.rs  function_maps.rs  functions_add_to_s_y  higher_math.rs  lexer.rs  main.rs  matrices.rs  matrix.rs  matrix2.rs  peekable_string_iterator.rs  rpn_calculator.rs  s_y.rs  shunting_yard.rs  tests.rs  token.rs
