[package]
name = "eq_solve"
version = "0.1.0"
authors = ["Trevor <71519259+TPXS-Drexel@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "calc"
path = "src/main.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
